--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vue/composition-api": "^1.2.4",
     "axios": "^0.23.0",
     "core-js": "^3.6.5",
+    "google-images": "^2.1.0",
     "unsplash-js": "^7.0.15",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
