--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.23.0",
     "core-js": "^3.6.5",
     "google-images": "^2.1.0",
+    "material-design-icons": "^3.0.1",
     "unsplash-js": "^7.0.15",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
